--- a/login/login.phtml
+++ b/login/login.phtml
@@ -23,7 +23,7 @@
 						ログイン
 					</div>
 					<div class="loginForm">
-						<form action="#" method="post">
+						<form action="login.php" method="post">
 							<br>
 
 							ユーザーID<br>
@@ -31,7 +31,7 @@
 							パスワード<br>
 							<input type="password" name="password"><br><br>
 
-							<input type="submit" id="login" value="ログイン">
+							<input type="submit" name="execute" value="ログイン">
 
 						</form>
 					</div>
