--- a/insertUser/insertUser.phtml
+++ b/insertUser/insertUser.phtml
@@ -35,7 +35,7 @@
 					<p>ユーザー名 :  / 権限 : </p>
 				</div>
 				<div class="userInfo float-right">
-					<p><a href="../login/login.html">ログアウト</a></p>
+					<p><a href="../login/login.php">ログアウト</a></p>
 				</div>
 			</div>
 
@@ -45,21 +45,21 @@
 	   			 		<ul>
 	    				</ul>
 	 				 </li>
-	  				<li><a href="../overallWorkTime/ovarallWorkTime.html">勤務時間表</a>
+	  				<li><a href="../overallWorkTime/ovarallWorkTime.php">勤務時間表</a>
 	   					<ul>
 	   					</ul>
 	 				</li>
-	 				<li><a href="../settingHoliday/settingHoliday.html">休日設定</a>
+	 				<li><a href="../settingHoliday/settingHoliday.php">休日設定</a>
 	    				<ul>
 	   					</ul>
 	 				</li>
 	  				<li><a href="#">ユーザー設定</a>
 	   					<ul>
-	     					<li><a href="../updateUser/updateUser.html">ユーザー設定変更</a></li>
-	     					<li><a href="../insertUser/insertUser.html">ユーザー登録</a></li>
+	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
+	     					<li><a href="./insertUser.php">ユーザー登録</a></li>
 	   					</ul>
 	  				</li>
-	  				<li><a href="../settingRestTime/settingRestTime.html">休憩時間設定</a>
+	  				<li><a href="../settingRestTime/settingRestTime.php">休憩時間設定</a>
 	   					<ul>
 	   					</ul>
 	  				</li>
@@ -102,7 +102,7 @@
 							<td>権限</td>
 							<td><select name="authority">
 									<option value="2">管理者</option>
-									<option value="1">一般</option>
+									<option value="1">一般ユーザー</option>
 								</select>
 							</td>
 						<tr>
@@ -110,7 +110,7 @@
 							<td>役割</td>
 							<td><select name="positionid">
 									<?php foreach($model->getPositionList() as $key =>$val):?>
-										<option value="<?php echo $val["positionid"];?>"><?php echo $val["name"];?></option>
+										<option value="<?php echo $val["positionid"];?>"><?php echo $val["p-name"];?></option>
 									<?php endforeach;?>
 								</select>
 							</td>
@@ -122,7 +122,7 @@
 									foreach($model->getColorList() as $dex =>$col):
 									$count = $dex + 1;
 								?>
-									<input type="radio" name="colorid" value="<?php echo $col["colorid"];?>"><font color="<?php echo $col["code"];?>"><?php echo $col["name"];?></font>
+									<input type="radio" name="colorid" value="<?php echo $col["colorid"];?>"><font color="<?php echo $col["code"];?>"><?php echo $col["c-name"];?></font>
 									<?php if($count%4 == 0):?>
 										<br>
 									<?php endif;?>
