--- a/mainMenu/mainMenu.phtml
+++ b/mainMenu/mainMenu.phtml
@@ -1,126 +1,3 @@
-<?php
-//現在の日付を取得
-$year = date('Y');	//年
-$month = date('n');	//月
-$today = date('j');	//日
-
-//去年、来年に遷移する際の処理
-
-if(isset($_GET["kyonen"])){	//来年のカレンダー表示のリンクからの遷移かをチェック
-
-	//strnotime関数を使用し、その年数分を足しこんだ日付データをそれぞれ取得する
-
-	$year0 = date('Y', strtotime($_GET["kyonen"]."-".$_GET["month"]."-1 -1 year"));	//1年前の年を取得
-	$month0 = date('n', strtotime($_GET["kyonen"]."-".$_GET["month"]."-1 -1 year"));//1年前の月を取得
-
-}else if(isset($_GET["rainen"])){	//昨年のカレンダー表示リンクからの遷移かをチェック
-
-	$year0 = date('Y', strtotime($_GET["rainen"]."-".$_GET["month"]."-1 +1 year"));	//1年先の年を取得
-	$month0= date('n', strtotime($_GET["rainen"]."-".$_GET["month"]."-1 +1 year"));	//1年先の月を取得
-
-//先月、翌月に遷移する際の処理
-
-}else if(isset($_GET["sengetu"])){ //先月のカレンダー表示リンクからの遷移かをチェック
-
-	$year0 = date('Y', strtotime($_GET["year"]."-".$_GET["sengetu"]."-1 -1 month"));	//1ヶ月前の年を取得
-	$month0 = date('n', strtotime($_GET["year"]."-".$_GET["sengetu"]."-1 -1 month"));	//1ヶ月前の月を取得
-
-}else if(isset($_GET["yokugetu"])){	//翌月のカレンダー表示リンクからの遷移かをチェック
-
-	$year0 = date('Y', strtotime($_GET["year"]."-".$_GET["yokugetu"]."-1 +1 month"));	//1ヶ月先の年を取得
-	$month0 = date('n', strtotime($_GET["year"]."-".$_GET["yokugetu"]."-1 +1 month")); 	//1ヶ月先の月を取得
-
-//初期状態の場合
-}else{
-
-	//現在の日付データを日付情報として格納する。
-
-	$year0 = $year;		//今年
-	$month0 = $month;	//今月
-
-}
-
-//表示の決定
-
-if(isset($_GET["disp"])){
-
-	$dispMonth = $_GET["disp"];
-
-}else{
-
-	$dispMonth = 1;
-
-}
-
-if(isset($_POST["reset"])){
-	//現在の日付データを日付情報として格納する。
-
-	$year0 = $year;		//今年
-	$month0 = $month;	//今月
-	$dispMonth = 1;
-}
-
-//2ヶ月分の月情報を変数に格納
-
-$year1  = date('Y', strtotime($year0."-".$month0."-1 +1 month"));	//1ヶ月先の年を取得
-$month1 = date('n', strtotime($year0."-".$month0."-1 +1 month"));	//1ヶ月先の月を取得
-$year2  = date('Y', strtotime($year0."-".$month0."-1 +2 month"));	//2ヶ月先の年を取得
-$month2 = date('n', strtotime($year0."-".$month0."-1 +2 month"));	//2ヶ月先の月を取得
-
-//フォントの色を黒で初期化
-$fontcolor = "#000000";
-
-
-//3か月分ループをまわして日付情報を格納する
-for($calNum=0 ; $calNum < 3 ;$calNum++){
-
-	// 月末日を取得
-	$last_day = date('t', strtotime(${'year'.$calNum}."-".${'month'.$calNum}."-1"));
-
-	//日付情報を格納するクラスclanderを「clander + ループ回数」の変数名で配列として初期化
-	${'calendar'.$calNum} = array();
-	$j = 0;
-
-	// 月末日までループ
-
-	for ($i = 1; $i < $last_day + 1; $i++) {
-
-		// 曜日を取得
-		$week[] = date('w', mktime(0, 0, 0, ${'month'.$calNum}, $i, ${'year'.$calNum}));
-
-		// 1日の場合
-		if ($i == 1) {
-
-			// 1日目の曜日までをループ
-			for ($s = 1; $s <= $week[$calNum]; $s++) {
-
-				// 前半に空文字をセット
-				${'calendar'.$calNum}[$j]['day'] = '';
-				$j++;
-			}
-		}
-
-		// 配列に日付をセット
-		${'calendar'.$calNum}[$j]['day'] = $i;
-		$j++;
-
-		// 月末日の場合
-		if ($i == $last_day) {
-
-			// 月末日から残りをループ
-			for ($e = 1; $e <= 6 - $week[$calCnt]; $e++) {
-
-				// 後半に空文字をセット
-				${'calendar'.$calNum}[$j]['day'] = '';
-				$j++;
-			}
-		}
-	}
-
-}
-
-?>
-
 <!DOCTYPE html>
 <html lang="ja">
 	<head>
@@ -132,9 +9,16 @@ for($calNum=0 ; $calNum < 3 ;$calNum++){
 		<script src="../jquery/jquery-ui.js"></script>
 		<script>
 
+		/*
+		--------------------------------------
+					タブ切り替え機能
+		--------------------------------------
+		*/
+
+		//1ヶ月,2ヶ月,3ヶ月部分のタブ切り替えの初期表示を変数から受け取って表示する。
 		jQuery( function() {
 	   		jQuery( '#jquery-ui-tabs' ) . tabs( {
-	        	active: <?php echo $dispMonth;?>,
+	        	active: <?php echo $model->getDispMonth();?>,
 	    	} );
 		} );
 
@@ -276,32 +160,32 @@ for($calNum=0 ; $calNum < 3 ;$calNum++){
 					<p>ユーザー名 : admin / 権限 : 管理者</p>
 				</div>
 				<div class="userInfo float-right">
-					<p><a href="#">ログアウト</a></p>
+					<p><a href="../login/login.php">ログアウト</a></p>
 				</div>
 			</div>
 
 			<div class="box menu"><!-- ヘッダーメニュー-->
 				<ul id="dropmenu">
-	 				<li><a href="#">メニュー</a>
+	 				<li><a href="">メニュー</a>
 	   			 		<ul>
 	    				</ul>
 	 				 </li>
-	  				<li><a href="ovarallWarkTime.html">勤務時間表</a>
+	  				<li><a href="../overallWorkTime/overallWorkTime.html">勤務時間表</a>
 	   					<ul>
 	   					</ul>
 	 				</li>
-	 				<li><a href="settingHoliday.html">休日設定</a>
+	 				<li><a href="../settingHoliday/settingHoliday.html">休日設定</a>
 	    				<ul>
 	   					</ul>
 	 				</li>
 	  				<li><a href="#">ユーザー設定</a>
 	   					<ul>
-     					 	<li><a href="changePassword.html">パスワード変更</a></li>
-	     					<li><a href="updateUser.html">ユーザー設定変更</a></li>
-	     					<li><a href="insertUser.html">ユーザー登録</a></li>
+     					 	<li><a href="../changePassword/changePassword.html">パスワード変更</a></li>
+	     					<li><a href="../updateUser/updateUser.php">ユーザー設定変更</a></li>
+	     					<li><a href="../insertUser/insertUser.html">ユーザー登録</a></li>
 	   					</ul>
 	  				</li>
-	  				<li><a href="settingRestTime.html">休憩時間設定</a>
+	  				<li><a href="../settingRestTime/settingRestTime.html">休憩時間設定</a>
 	   					<ul>
 	   					</ul>
 	  				</li>
@@ -477,262 +361,113 @@ for($calNum=0 ; $calNum < 3 ;$calNum++){
 
 						</dl>
 
+					<?php
+						for($i=0; $i < count($model->getYear());$i++):
+					?>
 
-    				<div id="jquery-ui-tabs-1"><!-- 1ヶ月分のカレンダーを表示 -->
+	    				<div id="jquery-ui-tabs-<?php echo $i+1;?>"><!-- $iヶ月分のカレンダーを表示 -->
+							<?php for($j=0;	$j <= $i; $j++):?>
+								<table>
+									<tr>
+										<th width="100%" colspan="7" style="background-color: #B3F8FA; text-align: center; font-weight: bold;">
+										<?php if($j == 0):?>
+											<a href="./mainMenu.php?changeTime=kyonen&year=<?php echo $model->getSelYear(0);?>&month=<?php echo $model->getSelMonth(0);?>&disp=<?php echo (2-$i);?>">
+												&lt;&lt;
+											</a>
 
-						<table>
-							<tr>
-								<th width="100%" colspan="7" style="background-color: #B3F8FA; text-align: center; font-weight: bold;">
-									<a href="mainMenu-admin.php?kyonen=<?php echo $year0;?>&month=<?php echo $month0;?>&disp=2">&lt;&lt;</a>
-									 &nbsp;&nbsp;
-									 <a href="mainMenu-admin.php?sengetu=<?php echo $month0;?>&year=<?php echo$year0;?>&disp=2">&lt;</a>
-									 &nbsp;&nbsp;&nbsp;
-									<?php echo $year0; ?>年<?php echo $month0; ?>月
-									&nbsp;&nbsp;
-									<a href="mainMenu-admin.php?yokugetu=<?php echo $month0;?>&year=<?php echo$year0;?>&disp=2">&gt;</a>
-									&nbsp;&nbsp;&nbsp;
-									<a href="mainMenu-admin.php?rainen=<?php echo $year0;?>&month=<?php echo $month0;?>&disp=2">&gt;&gt;</a>
-								</th>
-							</tr>
-    						<tr>
-        						<th style="color: red;">日</th>
-        						<th>月</th>
-        						<th>火</th>
-       							<th>水</th>
-        						<th>木</th>
-        						<th>金</th>
-        						<th style="color: blue;">土</th>
-    						</tr>
-
-		    				<tr>
-		    					<?php
-		    						$cnt = 0;
-		    					?>
-    							<?php foreach ($calendar0 as $key => $value): ?>
-
-								<?php
-
-									//現在の日にちのカレンダーかつ,日付が一致しループの一回目の場合、本日日付のカレンダーの色を変更する
-
-									if($year0 == $year && $month0 == $month && $value['day'] == $today && $calCnt == 0){
-										$stylecolor="#EEF1F1";
-									}else{
-										$stylecolor="#FFFFFF";
-									}
-
-									//土日の色を変更する
-
-		        					if($cnt == 0){
-										$fontcolor="red";
-		    						}else if($cnt == 6){
-										$fontcolor="blue";
-		    						}else{
-		    							$fontcolor="#000000";
-		    						}
-		        				?>
-
-								<td style="background-color: <?php echo $stylecolor;?>; color:<?php echo $fontcolor;?>;">
-		        					<?php $cnt++; ?>
-
-		        					<div class="day-calendar" data-year="<?php echo $year0;?>" data-month="<?php echo $month0;?>" data-day="<?php echo $value['day']; ?>">
-		        						<?php echo $value['day']; ?>
-		       						</div>
-		        					<?php if($value['day'] == 8){?>
-		        					<div class="work-calendar">
-		        						<div id="work"><span id="change" data-name="神田太郎">神田太郎</span>  <span id="time">12:00~18:00</span>  講</div>
-		        					</div>
-		        					<?php }?>
-		        				</td>
-
-
-		    					<?php if ($cnt == 7): ?>
-		    				</tr>
-
-		    				<tr>
-		    					<?php $cnt = 0; ?>
-
-		   						<?php endif; ?>
-		    					<?php
-		    						endforeach;
-		    					?>
-		   				 	</tr>
-						</table>
-					</div>
-
-   					 <div id="jquery-ui-tabs-2">
-						<?php
-							//for文を2か月分ループさせる
-							for($calCnt = 0 ; $calCnt < 2 ; $calCnt++):
-						?>
-
-							<table>
-								<tr>
-									<th width="100%" colspan="7" style="background-color: #B3F8FA; text-align: center; font-weight: bold;">
-
-										<?php if($calCnt == 0):?>
-											<a href="mainMenu-admin.php?kyonen=<?php echo $year0;?>&month=<?php echo $month0;?>">&lt;&lt;</a>
 											 &nbsp;&nbsp;
-											 <a href="mainMenu-admin.php?sengetu=<?php echo $month0;?>&year=<?php echo$year0;?>">&lt;</a>
-									 		&nbsp;&nbsp;&nbsp;
-										<?php endif;?>
 
-										<?php echo ${'year'.$calCnt}; ?>年<?php echo ${'month'.$calCnt}; ?>月
+											 <a href="./mainMenu.php?changeTime=sengetu&year=<?php echo $model->getSelYear(0);?>&month=<?php echo $model->getSelMonth(0);?>&disp=<?php echo (2-$i);?>">
+											 	&lt;
+											 </a>
 
-										<?php if($calCnt == 0):?>
-											&nbsp;&nbsp;
-											<a href="mainMenu-admin.php?yokugetu=<?php echo $month0;?>&year=<?php echo$year0;?>">&gt;</a>
-											&nbsp;&nbsp;&nbsp;
-											<a href="mainMenu-admin.php?rainen=<?php echo $year0;?>&month=<?php echo $month0;?>">&gt;&gt;</a>
-										<?php endif;?>
-
-									</th>
-								</tr>
-	    						<tr>
-	        						<th style="color: red;">日</th>
-	        						<th>月</th>
-	        						<th>火</th>
-	       							<th>水</th>
-	        						<th>木</th>
-	        						<th>金</th>
-	        						<th style="color: blue;">土</th>
-	    						</tr>
-
-			    				<tr>
-			    					<?php $cnt = 0; ?>
-	    							<?php foreach (${'calendar'.$calCnt} as $key => $value): ?>
-
-									<?php
-										if($year0 == $year && $month0 == $month && $value['day'] == $today && $calCnt == 0){
-											$stylecolor="#EEF1F1";
-										}else{
-											$stylecolor="#FFFFFF";
-										}
-
-			        					if($cnt == 0){
-											$fontcolor="red";
-			    						}else if($cnt == 6){
-											$fontcolor="blue";
-			    						}else{
-			    							$fontcolor="#000000";
-			    						}
-			        				?>
-
-									<td style="background-color: <?php echo $stylecolor;?>; color:<?php echo $fontcolor;?>;">
-			        					<?php $cnt++; ?>
-
-			        					<div class="day-calendar" data-year="<?php echo ${'year'.$calCnt};?>" data-month="<?php echo ${'month'.$calCnt};?>" data-day="<?php echo $value['day']; ?>">
-			        						<?php echo $value['day']; ?>
-			       						</div>
-			        					<?php if($value['day'] == 8){?>
-			        					<div class="work-calendar">
-			        						<div id="work"><span id="change" data-name="神田太郎">神田太郎</span>  <span id="time">12:00~18:00</span>  講</div>
-			        					</div>
-			        					<?php }?>
-			        				</td>
-
-
-			    					<?php if ($cnt == 7): ?>
-			    				</tr>
-
-			    				<tr>
-			    					<?php $cnt = 0; ?>
-
-			   						<?php endif; ?>
-			    					<?php   endforeach; ?>
-			   				 	</tr>
-							</table>
-
-						<?php endfor;?>
-					</div><!-- jquery-ui-tabs-2 -->
-
-   					 <div id="jquery-ui-tabs-3">
-
-						<?php
-							//for文を3か月分ループさせる
-							for($calCnt = 0 ; $calCnt < 3 ; $calCnt++):
-						?>
-
-							<table>
-								<tr>
-									<th width="100%" colspan="7" style="background-color: #B3F8FA; text-align: center; font-weight: bold;">
-
-										<?php if($calCnt == 0):?>
-											<a href="mainMenu-admin.php?kyonen=<?php echo $year0;?>&month=<?php echo $month0;?>&disp=0">&lt;&lt;</a>
-											 &nbsp;&nbsp;
-											 <a href="mainMenu-admin.php?sengetu=<?php echo $month0;?>&year=<?php echo$year0;?>&disp=0">&lt;</a>
 											 &nbsp;&nbsp;&nbsp;
 										<?php endif;?>
 
-										<?php echo ${'year'.$calCnt}; ?>年<?php echo ${'month'.$calCnt}; ?>月
+											<?php echo $model->getSelYear($j); ?>年<?php echo $model->getSelMonth($j); ?>月
 
-										<?php if($calCnt == 0):?>
+										<?php if($j == 0):?>
 											&nbsp;&nbsp;
-											<a href="mainMenu-admin.php?yokugetu=<?php echo $month0;?>&year=<?php echo$year0;?>&disp=0">&gt;</a>
+
+											<a href="./mainMenu.php?changeTime=yokugetu&year=<?php echo $model->getSelYear(0);?>&month=<?php echo $model->getSelMonth(0);?>&disp=<?php echo (2-$i);?>">
+												&gt;
+											</a>
+
 											&nbsp;&nbsp;&nbsp;
-											<a href="mainMenu-admin.php?rainen=<?php echo $year0;?>&month=<?php echo $month0;?>&disp=0">&gt;&gt;</a>
+
+											<a href="./mainMenu.php?changeTime=rainen&year=<?php echo $model->getSelYear(0);?>&month=<?php echo $model->getSelMonth(0);?>&disp=<?php echo (2-$i);?>">
+												&gt;&gt;
+											</a>
 										<?php endif;?>
+										</th>
+									</tr>
+		    						<tr>
+		        						<th style="color: red;">日</th>
+		        						<th>月</th>
+		        						<th>火</th>
+		       							<th>水</th>
+		        						<th>木</th>
+		        						<th>金</th>
+		        						<th style="color: blue;">土</th>
+		    						</tr>
 
-									</th>
-								</tr>
-	    						<tr>
-	        						<th style="color: red;">日</th>
-	        						<th>月</th>
-	        						<th>火</th>
-	       							<th>水</th>
-	        						<th>木</th>
-	        						<th>金</th>
-	        						<th style="color: blue;">土</th>
-	    						</tr>
+				    				<tr>
+				    					<?php
+				    						$cnt = 0;
+				    					?>
+		    							<?php foreach ($model->getSelCalendar($j) as $key => $value): ?>
 
-			    				<tr>
-			    					<?php $cnt = 0; ?>
-	    							<?php foreach (${'calendar'.$calCnt} as $key => $value): ?>
+										<?php
 
-									<?php
-										if($year0 == $year && $month0 == $month && $value['day'] == $today && $calCnt == 0){
-											$stylecolor="#EEF1F1";
-										}else{
-											$stylecolor="#FFFFFF";
-										}
+											//現在の日にちのカレンダーかつ,日付が一致しループの一回目の場合、本日日付のカレンダーの色を変更する
 
-			        					if($cnt == 0){
-											$fontcolor="red";
-			    						}else if($cnt == 6){
-											$fontcolor="blue";
-			    						}else{
-			    							$fontcolor="#000000";
-			    						}
-			        				?>
+											if($model->getYear() == $model->getToday() && $model->getMonth() == $month && $value['day'] == $today && $calCnt == 0){
+												$stylecolor="#EEF1F1";
+											}else{
+												$stylecolor="#FFFFFF";
+											}
 
-									<td style="background-color: <?php echo $stylecolor;?>; color:<?php echo $fontcolor;?>;">
-			        					<?php $cnt++; ?>
+											//土日の色を変更する
 
-			        					<div  class="day-calendar" data-year="<?php echo ${'year'.$calCnt};?>" data-month="<?php echo ${'month'.$calCnt};?>" data-day="<?php echo $value['day']; ?>">
-			        						<?php echo $value['day']; ?>
-			       						</div>
-			        					<?php if($value['day'] == 8){?>
-			        					<div class="work-calendar">
-			        						<div id="work"><span id="change" data-name="神田太郎">神田太郎</span>  <span id="time">12:00~18:00</span>  講</div>
-			        					</div>
-			        					<?php }?>
-			        				</td>
+				        					if($cnt == 0){
+												$fontcolor="red";
+				    						}else if($cnt == 6){
+												$fontcolor="blue";
+				    						}else{
+				    							$fontcolor="#000000";
+				    						}
+				        				?>
+
+										<td style="background-color: <?php echo $stylecolor;?>; color:<?php echo $fontcolor;?>;">
+				        					<?php $cnt++; ?>
+
+				        					<div class="day-calendar" data-year="<?php echo $model->getSelYear($j);?>" data-month="<?php echo $model->getSelMonth($j);?>" data-day="<?php echo $value['day']; ?>">
+				        						<?php echo $value['day']; ?>
+				       						</div>
+				        					<?php if($value['day'] == 8){?>
+				        					<div class="work-calendar">
+				        						<div id="work"><span id="change" data-name="神田太郎">神田太郎</span>  <span id="time">12:00~18:00</span>  講</div>
+				        					</div>
+				        					<?php }?>
+				        				</td>
 
 
-			    					<?php if ($cnt == 7): ?>
-			    				</tr>
+				    					<?php if ($cnt == 7): ?>
+				    				</tr>
 
-			    				<tr>
-			    					<?php $cnt = 0; ?>
+				    				<tr>
+				    					<?php $cnt = 0; ?>
 
-			   						<?php endif; ?>
-			    					<?php endforeach; ?>
-			   				 	</tr>
-							</table>
+				   						<?php endif; ?>
+				    					<?php
+				    						endforeach;
+				    					?>
+				   				 	</tr>
+								</table>
+							<?php endfor;?>
+						</div>
 
-						<?php endfor;?>
-
-   					 </div><!-- jquery-ui-tabs-3" -->
-
+					<?php endfor;?>
 				</div><!-- jquery-ui-tabs -->
 
 			</div><!-- box main-container  -->
